# SRSim

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  pyproject.toml
.github/workflow/: pytest.yaml
.github/workflows/: pytest.yaml
src/: main.py
src/srsim/core/: abilities.py  actions.py  ai.py  battle_state.py  damage.py  engine.py  enums.py  pending_actions.py  stats.py  timeline.py  unit.py
src/srsim/enums/: elements.py  path.py
src/srsim/schemas/: base.py  characters.py  elements.py  enemies.py  lightcones.py  path.py  relicsets.py
tests/: test_battle.py
