[project]
name = "srsim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["pydantic-settings>=2.12.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["I"]

[dependency-groups]
dev = ["pre-commit>=4.5.0", "ruff>=0.14.7"]
